style: :art: Update styling of signin page, fix layout for index
Changes center the form on signin page and fix breaking layout issues from layout component

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,11 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
-.layout {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-}
-
 .center {
 	width: 100%;
 	height: 100%;
