--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,12 @@
-//components
+// colours
+$offblack: #141414;
+$white: #f6f6f6;
+
+// components
 $btn: #242424;
 $btn-hover: #313131;
 $btn-padding: 8px 12px 8px 12px;
 $border-stroke: 1px #454545 solid;
 
-//typography
+// typography
 $placeholder: #5c5c5c;
