--- a/src/styles/auth/Signin.module.scss
+++ b/src/styles/auth/Signin.module.scss
@@ -4,28 +4,34 @@
 	display: flex;
 	flex-direction: column;
 	align-self: center;
+	justify-self: space-around;
+	max-width: 311px;
+	width: 100%;
+
+	.form_header {
+		text-align: center;
+	}
 }
 
 .input_group {
 	display: flex;
 	flex-direction: column;
-}
 
-.input {
-	max-width: 359px;
-	width: 100%;
-	height: 44px;
-	margin-bottom: 16px;
-	border-radius: 4px;
-	border: $border-stroke;
-	background-color: transparent;
-	color: white;
-	padding-left: 8px;
-	padding-right: 8px;
+	.input {
+		max-width: 420px;
+		height: 44px;
+		margin-bottom: 16px;
+		border-radius: 4px;
+		border: $border-stroke;
+		background-color: transparent;
+		color: white;
+		padding-left: 8px;
+		padding-right: 8px;
 
-	&::placeholder {
-		color: $placeholder;
-		opacity: 1;
+		&::placeholder {
+			color: $placeholder;
+			opacity: 1;
+		}
 	}
 }
 
@@ -33,13 +39,20 @@
 	display: flex;
 	flex-direction: column;
 	max-width: 311px;
-}
 
-.button {
-	height: 32px;
-	border: none;
-	border-radius: 4px;
-	margin-bottom: 16px;
+	.button {
+		font-size: 14px;
+		color: $offblack;
+		height: 44px;
+		border: none;
+		border-radius: 4px;
+		margin-bottom: 16px;
+	}
+
+	.button:first-child {
+		color: $white;
+		background-color: rgb(65, 103, 226);
+	}
 }
 
 .signup_text {
@@ -51,7 +64,6 @@
 	margin-left: 8px;
 	text-decoration: none;
 	text-align: center;
-	font-weight: bold;
 	color: white;
 	background-color: $btn;
 	border: 1px #454545 solid;
