--- a/src/styles/components/Layout.module.scss
+++ b/src/styles/components/Layout.module.scss
@@ -1,21 +1,30 @@
 @import "@/styles/variables";
 
-.layout {
+.layout_wrapper {
 	display: flex;
 	flex-direction: column;
+	padding: 0% 4% 0% 4%;
 	height: 100vh;
-	padding: 0% 5% 0% 5%;
+}
+
+.children_layout {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 100vh;
 }
 
 .nav {
-	margin-top: 32px;
 	display: flex;
+	flex-direction: row;
 	justify-content: space-between;
-}
+	margin-top: 32px;
 
-.logo {
-	font-weight: 700;
-	text-transform: uppercase;
-	text-decoration: none;
-	color: white;
+	.logo {
+		max-width: fit-content;
+		font-weight: 700;
+		text-transform: uppercase;
+		text-decoration: none;
+		color: white;
+	}
 }
